Prices fixed and Price CB

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,18 @@
     border-left: 2px solid black;
   }
 
+  #products2030 {
+    border-left: 2px solid black;
+  }
+
+  #products3040 {
+    border-left: 2px solid black;
+  }
+
+  #products5060 {
+    border-left: 2px solid black;
+  }
+
 
   #sortBy {
     padding-left: 30px;
